--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPe
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_9
+MinimumiOSVersion=IOS_11
 
 
 [/Script/Engine.Engine]
@@ -24,6 +24,11 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.ForwardShading=False
+r.DefaultFeature.AntiAliasing=2
+r.CustomDepth=3
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -53,7 +58,7 @@ bSimulateSkeletalMeshOnDedicatedServer=True
 DefaultShapeComplexity=CTF_UseSimpleAndComplex
 bDefaultHasComplexCollision=True
 bSuppressFaceRemapTable=False
-bSupportUVFromHitResults=False
+bSupportUVFromHitResults=True
 bDisableActiveActors=False
 bDisableKinematicStaticPairs=False
 bDisableKinematicKinematicPairs=False
@@ -69,4 +74,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
